# small_fisher

./: .gitignore  README.md  pyproject.toml  skills-lock.json
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
src/small_fisher/: __init__.py  cli.py  downloader.py  utils.py  web.py
