[project]
name = "small-fisher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
small-fisher = "small_fisher.cli:main"
small_fisher = "small_fisher.cli:main"
